[gd_scene load_steps=3 format=3 uid="uid://w7bwlufikhww"]

[ext_resource type="Script" path="res://Scripts/Inventory.gd" id="1_kqjo5"]
[ext_resource type="Texture2D" uid="uid://blu0eh5s205vp" path="res://Sprites/BackgroundSlot.png" id="2_d66r1"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kqjo5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -84.0
offset_right = 116.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.654902, 0.482353, 0.356863, 1)

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -77.0
offset_right = 99.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = -1
theme_override_constants/v_separation = -1
columns = 4

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 93.0
offset_right = 60.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 29.0
text = "Start Round"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -221.0
offset_right = 79.5
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_d66r1")

[node name="GridContainer" type="GridContainer" parent="TextureRect"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 7.5
offset_right = -10.0
offset_bottom = -3.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = -7

[node name="HealthLabel" type="Label" parent="TextureRect/GridContainer"]
layout_mode = 2
text = "Health: 3"

[node name="ArmorLabel" type="Label" parent="TextureRect/GridContainer"]
layout_mode = 2
text = "Armor: 2"

[node name="DamageLabel" type="Label" parent="TextureRect/GridContainer"]
layout_mode = 2
text = "Damage: 10"

[node name="HitChanceLabel" type="Label" parent="TextureRect/GridContainer"]
layout_mode = 2
text = "Hit Chance: 10%"

[node name="CritChanceLabel" type="Label" parent="TextureRect/GridContainer"]
layout_mode = 2
text = "Crit Chance: 10%"

[node name="CritLabel" type="Label" parent="TextureRect/GridContainer"]
layout_mode = 2
text = "Crit Damage: 10%"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
